packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/input.js
import { Inter } from '@next/font/google'
fn(...{})
const a = fn(...{})
const inter = Inter(...{})
Inter(...{})
